--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
   "description" : "Google authenticator (HOTP & TOTP)",
   "keywords": ["module", "xp"],
   "require" : {
-    "xp-framework/core": "^12.0 | ^11.0 | ^10.0 | ^9.0 | ^8.0 | ^7.3",
-    "php" : ">=7.0.0"
+    "xp-framework/core": "^12.0 | ^11.0 | ^10.0",
+    "php" : ">=7.4.0"
   },
   "require-dev" : {
-    "xp-framework/test": "^2.0 | ^1.0"
+    "xp-framework/test": "^2.0"
   },
   "autoload" : {
     "files" : ["src/main/php/autoload.php"]
